[package]
name = "frontrunning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
ethers = "2.0.14"
rand = "0.8.5"
reqwest = { version = "0.12", features = [ "json", "blocking"], default-features = true }
tokio-tungstenite = "0.25.0"
tungstenite = "0.25.0"
url = "2.5.4"
